@@ -927,35 +927,15 @@ public abstract class BaseTokenStreamTestCase extends LuceneTestCase {
     return keywordMockTokenizer(new StringReader(input));
   }
   
-  /**
-   * This provides the default AttributeFactory in reflective-only mode (package private)
-   * so we can test it.
-   */
-  private final static AttributeFactory REFLECTIVE_ATTRIBUTE_FACTORY;
-  static {
-    try {
-      final Constructor<? extends AttributeFactory> constr = Class
-          .forName(AttributeFactory.class.getName() + "$DefaultAttributeFactory")
-          .asSubclass(AttributeFactory.class)
-          .getDeclaredConstructor(boolean.class);
-      constr.setAccessible(true);
-      REFLECTIVE_ATTRIBUTE_FACTORY = constr.newInstance(false);
-    } catch (ReflectiveOperationException e) {
-      throw new Error("Cannot initantiate a reflective-only DefaultAttributeFactory", e);
-    }
-  }
-  
   /** Returns a random AttributeFactory impl */
   public static AttributeFactory newAttributeFactory(Random random) {
-    switch (random.nextInt(4)) {
+    switch (random.nextInt(3)) {
       case 0:
         return TokenStream.DEFAULT_TOKEN_ATTRIBUTE_FACTORY;
       case 1:
         return Token.TOKEN_ATTRIBUTE_FACTORY;
       case 2:
         return AttributeFactory.DEFAULT_ATTRIBUTE_FACTORY;
-      case 3:
-        return REFLECTIVE_ATTRIBUTE_FACTORY;
       default:
         throw new AssertionError("Please fix the Random.nextInt() call above");
     }
